scenery/tests/errors/malformed-coordinate.typ
// expected: point must be a 2- or 3-component array
#import "/lib.typ": sphere
#sphere((1,), 1)
